--- a/snippets/cart-drawer-items.liquid
+++ b/snippets/cart-drawer-items.liquid
@@ -1,8 +1,8 @@
 {%- comment -%} Minimal cart line items for standalone cart drawer. Uses standard Liquid cart only. {%- endcomment -%}
 <div class="cart-drawer-items" data-cart-drawer-content>
   {% if cart.empty? %}
-    <p class="cart-drawer__empty">{{ 'cart.general.empty' | t | default: 'Your cart is empty' }}</p>
-    <a href="{{ routes.all_products_collection_url | default: '/collections/all' }}" class="button">{{ 'cart.general.continue_shopping' | t | default: 'Continue shopping' }}</a>
+    <p class="cart-drawer__empty">{{ 'Your cart is empty' }}</p>
+    <a href="{{ routes.all_products_collection_url | default: '/collections/all' }}" class="button">{{ 'Continue shopping' }}</a>
   {% else %}
     <form action="{{ routes.cart_url }}" method="post" id="cart-drawer-form" class="cart-form">
       <ul class="cart-drawer-items__list">
@@ -21,12 +21,12 @@
                 <input type="number" name="updates[]" id="updates-{{ item.key }}" value="{{ item.quantity }}" min="0" data-line="{{ forloop.index }}" class="cart-drawer-item__qty-input">
               </div>
               <div class="cart-drawer-item__price">{{ item.final_line_price | money }}</div>
-              <a href="{{ item.url_to_remove }}" class="cart-drawer-item__remove" aria-label="Remove">{{ 'cart.general.remove' | t | default: 'Remove' }}</a>
+              <a href="{{ item.url_to_remove }}" class="cart-drawer-item__remove" aria-label="Remove">{{ 'Remove' }}</a>
             </div>
           </li>
         {% endfor %}
       </ul>
-      <button type="submit" name="update" class="button button--secondary cart-drawer__update">{{ 'cart.general.update' | t | default: 'Update' }}</button>
+      <button type="submit" name="update" class="button button--secondary cart-drawer__update">{{ 'Update' }}</button>
     </form>
   {% endif %}
 </div>
